# simple_example

./: .gitignore  Makefile
silly_package/: pyproject.toml
silly_package/silly_package/: silly_flow.py
